--- a/Blog.html
+++ b/Blog.html
@@ -51,15 +51,17 @@
       <div class="blog">
         <div class="blog-content">
           <div class="blog-heading">
-            <h2>The Latest Frontend Technologies Shaping the Modern Web.</h2>
+            <h2>Why Cloud Solutions Are Essential for Modern Businesses.</h2>
           </div>
           <div class="blog-text">
             <p>
-              Frontend development continues to evolve at a rapid pace, bringing
-              new tools and technologies that make web applications faster, more
-              interactive, and easier to maintain. In recent years, the focus
-              has shifted toward performance, scalability, and improved
-              developer experience.
+              Moving your operations to the cloud isn’t just a trend; it’s a
+              strategic decision. Cloud solutions offer flexibility,
+              scalability, and cost-efficiency while ensuring that your data is
+              secure and accessible from anywhere. This article discusses the
+              key benefits of cloud adoption and how businesses of all sizes can
+              take advantage of cloud technology to streamline operations and
+              foster growth.
               <a class="btn btn-primary blog-btn" href="#">Learn more.</a>
             </p>
             <div class="blog-img">
@@ -91,19 +93,21 @@
       <div class="blog">
         <div class="blog-content">
           <div class="blog-heading">
-            <h2>Why Web Accessibility Matters More Than Ever</h2>
+            <h2>The Importance of UX Design for Digital Products.</h2>
           </div>
           <div class="blog-text">
             <p>
-              In modern web development, accessibility is no longer optional —
-              it’s a fundamental part of building quality user experiences. Web
-              accessibility ensures that websites can be used by everyone,
-              including people with visual, auditory, motor, or cognitive
-              impairments.
+              A great user experience is the cornerstone of any successful
+              digital product. Poor UX can frustrate users, reduce conversions,
+              and harm your brand’s credibility. In this article, we examine the
+              principles of UX design, including intuitive navigation,
+              responsive design, and accessibility, and explain how applying
+              these principles can make your product more engaging and
+              effective.
               <a class="btn btn-primary blog-btn" href="#">Learn more.</a>
             </p>
             <div class="blog-img">
-              <img src="images/cloud-4828390_1920.jpg" alt="" />
+              <img src="images/editor-3573850_1280.webp" alt="" />
             </div>
           </div>
         </div>
