--- a/index.html
+++ b/index.html
@@ -62,5 +62,53 @@
         </div>
       </div>
     </div>
+
+    <section class="services">
+      <div class="container">
+        <h1>What We Do:</h1>
+        <h2>
+          Innovative solutions, tailored for your business. Discover what we can
+          do for <i>you</i>.
+        </h2>
+        <div class="services-grid">
+          <div class="services-card">
+            <a href="">
+              <img src="images/ai.jpg" alt="" />
+              <div class="card-overlay">
+                <h3>Artificial Intelligence & Machine Learning</h3>
+                <p>
+                  Implement smart AI solutions that automate processes and
+                  provide actionable insights.
+                </p>
+              </div>
+            </a>
+          </div>
+          <div class="services-card">
+            <a href="">
+              <img src="images/tranformacaodigital-2.jpg" alt="" />
+              <div class="card-overlay">
+                <h3>Cybersecurity & Data Protection</h3>
+                <p>
+                  Protect your business from threats with advanced security
+                  strategies and monitoring.
+                </p>
+              </div>
+            </a>
+          </div>
+          <div class="services-card">
+            <a href="">
+              <img src="images/cloud-4828390_1920.jpg" alt="" />
+              <div class="card-overlay">
+                <h3>Cloud Solutions & Hosting</h3>
+                <p>
+                  Reliable cloud infrastructure and hosting services to keep
+                  your data safe and accessible.
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
