--- a/AboutUs.html
+++ b/AboutUs.html
@@ -46,5 +46,39 @@
         </div>
       </div>
     </nav>
+
+    <div class="about-us-hero">
+      <div class="container-xl">
+        <h1>Who We Are.</h1>
+        <h2>
+          Techlin is a leading technology solutions company dedicated to helping
+          businesses succeed in the digital age. With a focus on innovation,
+          security, and scalability, we provide tailored solutions that turn
+          ideas into impactful digital experiences.
+        </h2>
+      </div>
+    </div>
+    <div class="future">
+      <div class="our-mission">
+        <h1>Our Mission</h1>
+        <p>
+          Our mission is to deliver innovative technology solutions that empower
+          businesses to grow, streamline their operations, and achieve
+          measurable results. We focus on creating scalable, secure, and
+          user-friendly digital products tailored to each client’s unique needs,
+          helping them succeed in an increasingly digital world.
+        </p>
+      </div>
+      <div class="our-vision">
+        <h1>Our Vision</h1>
+        <p>
+          Our vision is to be a global leader in digital transformation,
+          creating seamless technology experiences that connect businesses and
+          their customers. We aspire to foster innovation, drive efficiency, and
+          enable sustainable growth for organizations of all sizes in every
+          industry.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
