--- a/Blog.html
+++ b/Blog.html
@@ -34,10 +34,10 @@
               <a href="index.html">Home</a>
             </li>
             <li>
-              <a href="AboutUs.html">About Us</a>
+              <a href="about.html">About Us</a>
             </li>
             <li>
-              <a href="Blog.html">Blog</a>
+              <a href="blog.html">Blog</a>
             </li>
             <li>
               <a class="btn" href=""><i class="icon-user"></i>Log in</a>
